# bricsctf-2023-stage2

./: .gitignore  README.md  check.py
checkers/: requirements.txt
checkers/leakless/: checker.py  example_lib.py
checkers/notes/: checker.py  example_lib.py  notes_lib.py
checkers/notify/: checker.py  extended_checker.py  maillib.py  notifylib.py
checkers/restmenu/: checker.py  restmenu_lib.py
internal/notes/: Dockerfile  build.sh
services/leakless/: Dockerfile  docker-compose.yml
services/notes/: Dockerfile  docker-compose.yml
services/notify/: README.md  TODO  docker-compose.yml
services/notify/notify-api/: .gitignore  Cargo.toml  Cranky.toml  Dockerfile
services/notify/notify-api/.sqlx/: query-18045044f03112ed98a57ca6a288a219e6237f00cbde531dd6c7829900d54992.json  query-3412b697c8010a4af524915e20dba30c5ba6598550a56cb534c6b6f569469f4e.json  query-3c622de77747ebb052acacd3418dff3c5dc98e5493c87f4aec27fe870502dbd6.json  query-59df7bc06d42ea2f8562e803ba3e347f280b905a562fe1c3c2d9e83f62ab662a.json  query-5c10fc85d01b63af020ec73ccf10cad9c04a79ba34f8a44808b17df65fd8972e.json  query-6deda3602cd5b5affc7d026056ea52cf368409df52cabcd81f0b2e9a673618a1.json  query-75d52c876f12ca04a3e929da20949ea1503714be7cfe81da7811c7436de6f8b5.json  query-7b5b53a22f5d3a607aa92147e983e7295840c81c4a26bdbfc42ec8eb96975d3f.json  query-7e45c583fa409da81bd5dcce9ad69737d06e295aaecc2c0c577b4ffea4ac3b1b.json  query-7ec0cc7964619cc6502ed04638fac2ddbb5deb4754c72e3224d3166003799f35.json  query-93252a0298e3703641768d52910d673a9801eb2601f337df98b8b31c85b470f1.json  query-b8ee245ef8153cd244eb935b031e7318605f221992dfc8c1ec1730ee62fae0bc.json  query-bb1e0b92725b1ae1d9f95dc62ff3d1b79b4d8eb48c414179d04baeb93c457bc3.json  query-c039d61f39ef02f732db291fe83a2544d3c8b98bcecc4afd2474ce58a0a9ce7b.json  query-c137e0e29c53293d25a0ea6cf94c39f7ddfe6aedaabe6c666511733e99c0e66c.json  query-de838c4961f460e157189f82cd4a2f128baf855b3beab66c68270c045a6dd682.json  query-de8d0314aae5b961133b3d65de12d8b5178d2540b63effd2b8100c645dc825cf.json  query-fcee9abd14c6fcaed408b7b3144ab663fea0b7ac737c3a4b93936d19524a3743.json  query-fe7dae3eb159aac05bf63036782452e65da543e509893eac420fc3a056e63258.json
services/notify/notify-api/src/: app.rs  cleaner.rs  config.rs  main.rs  repository.rs  rng.rs  session.rs  smtp.rs
services/notify/notify-api/src/app/: auth.rs  login.rs  notification.rs  register.rs  user.rs
services/restmenu/: .dockerignore  .gitignore  app.Dockerfile  docker-compose.yml  renderer.Dockerfile
sploits/leakless/: README.md  chinese_remainder_theoreme.py  participant_lll.py
sploits/notes/: README.md  (+2 more)
(+144 files in other folders)
