[package]
edition = "2021"
name = "notify-api"
version = "0.1.0"

[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
axum-extra = { version = "0.8.0", features = ["cookie", "cookie-private"] }
cookie = { version = "0.17.0", features = ["private"] }
lazy_static = "1.4.0"
regex = "1.10.2"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
time = { version = "0.3.30", features = ["serde"] }
tokio = { version = "1.33.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["catch-panic", "trace"] }
tracing = "0.1.39"
tracing-subscriber = { version = "0.3.17", features = ["json"] }
